make openapi endpoint names more readable
