# api/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: ContactBook API
+  title: ContactBookAPI
   version: 1.0.0
   description: ContactBook API
 
@@ -209,6 +209,7 @@ paths:
   /api/v1/auth:
     post:
       summary: User authentication
+      operationId: authUser
       requestBody:
         required: true
         content:
@@ -243,6 +244,7 @@ paths:
   /api/v1/auth/register:
     post:
       summary: Register new user
+      operationId: registerUser
       requestBody:
         required: true
         content:
@@ -277,6 +279,7 @@ paths:
   /api/v1/contacts:
     post:
       summary: Retrieve a list of contacts
+      operationId: getContacts
       security:
         - BearerAuth: []
       requestBody:
@@ -314,6 +317,7 @@ paths:
   /api/v1/contact:
     post:
       summary: Add a new contact
+      operationId: addContact
       security:
         - BearerAuth: []
       requestBody:
@@ -351,6 +355,7 @@ paths:
   /api/v1/contact/{contact_id}:
     post:
       summary: Retrieve a contact
+      operationId: getContact
       security:
         - BearerAuth: []
       parameters:
@@ -399,6 +404,7 @@ paths:
 
     delete:
       summary: Delete a contact
+      operationId: deleteContact
       security:
         - BearerAuth: []
       parameters:
